Widen the menu slightly to avoid wrapping

--- a/static/css/common.css
+++ b/static/css/common.css
@@ -11,7 +11,7 @@ header .menu {
   top: 10px;
   left: calc(50vw - 550px);
   height: calc(100vh - 10px);
-  width: 172px;
+  width: 175px;
 }
 
 header .menu.open {
